--- a/app/src/main/res/layout/reference_activity_list_item.xml
+++ b/app/src/main/res/layout/reference_activity_list_item.xml
@@ -15,7 +15,7 @@
             android:id="@+id/reference_activity_list_item_text_view_1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textSize="20sp"
+            android:textSize="@dimen/trauma_name_textsize"
             android:textColor="@android:color/white"
             android:paddingLeft="2dp"
             android:paddingTop="2dp"
@@ -25,7 +25,7 @@
             android:id="@+id/reference_activity_list_item_text_view_2"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textSize="16sp"
+            android:textSize="@dimen/trauma_symptom_textsize"
             android:textColor="@android:color/white"
             android:paddingStart="4dp"
             android:paddingTop="2dp"
@@ -35,7 +35,7 @@
             android:id="@+id/reference_activity_list_item_text_view_3"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textSize="16sp"
+            android:textSize="@dimen/trauma_symptom_listitem_textsize"
             android:textColor="@android:color/white"
             android:paddingStart="4dp"
             android:paddingTop="2dp"
