--- a/app/src/main/res/values-b+ru/texts.xml
+++ b/app/src/main/res/values-b+ru/texts.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="content_caller_text">
-        <b>Соберите</b> нужную информацию до звонка. Этим вы ускорите время вызова Скорой помощи\n
+        <b>Соберите</b> нужную информацию до звонка. Этим вы ускорите время вызова Скорой помощи\n\n
         <b>Адрес.</b> Улица, дом, корпус, подъезд, этаж, номер квартиры, код подъезда или домофон (этим вы ускорите прибытие бригады к пострадавшему).
         Точный адрес, с ориентирами, как можно проехать, если машина не сможет подъехать к самому месту ЧС, то где и кто будет встречать.
-        Если вы не можете их встретить. Обязательно послать человека встречать специалистов.\n
-        <b>Количество пострадавших.</b>\n
-        <b>Пол.</b>\n
-        <b>Возраст.</b> Примерно: подросток, около 12 и т. п.\n
-        <b>Что случилось.</b> Кратко: ДТП, без сознания и т. п.\n
-        <b>Кто вызвал</b> — прохожий, родственник, сосед и т. п.\n
-        Оставьте свой номер телефона. У бригады могут быть уточнения по мере выдвижения к вам. Это особенно важно, если вы где-нибудь на автостраде или в месте, вам незнакомом.\n
+        Если вы не можете их встретить. Обязательно послать человека встречать специалистов.\n\n
+        <b>Количество пострадавших.</b>\n\n
+        <b>Пол.</b>\n\n
+        <b>Возраст.</b> Примерно: подросток, около 12 и т. п.\n\n
+        <b>Что случилось.</b> Кратко: ДТП, без сознания и т. п.\n\n
+        <b>Кто вызвал</b> — прохожий, родственник, сосед и т. п.\n\n
+        Оставьте свой номер телефона. У бригады могут быть уточнения по мере выдвижения к вам. Это особенно важно, если вы где-нибудь на автостраде или в месте, вам незнакомом.\n\n
         <i>Трубку вешать только после того, как повесит диспетчер.</i></string>
 </resources>
