--- a/app/src/main/res/layout/content_update_reference_item.xml
+++ b/app/src/main/res/layout/content_update_reference_item.xml
@@ -96,6 +96,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onSymptomsShowHideClick"
+                android:background="@drawable/roundcorner"
+                android:textColor="@android:color/white"
+
                 />
 
         <ListView
@@ -104,6 +107,10 @@
                 android:layout_height="wrap_content"
                 android:visibility="visible"/>
     </LinearLayout>
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"/>
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -114,6 +121,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onStepsShowHideClick"
+                android:background="@drawable/roundcorner"
+                android:textColor="@android:color/white"
                 />
         <ListView
                 android:id="@+id/update_item_step_listview"
@@ -126,6 +135,8 @@
 </LinearLayout>
 
 <Button
+        android:background="@drawable/roundcorner"
+        android:textColor="@android:color/white"
         android:id="@+id/update_reference_item"
         android:layout_weight="1"
         android:layout_width="wrap_content"
